# streamlit-folium

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GREENFIELD_SPEC.md  LICENSE  MANIFEST.in  Overview.py  POC_PLAN.md  README.md  Taskfile.yml  UV_WORKFLOW.md  app.py  error.py  pyproject.toml  realtime-iss-popups.py  requirements.txt  setup.py  test_minimal_ccv2.py  vnext_demo.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: linting.yml  publish_PYPI_each_tag.yml  python-package.yml  run_tests_each_PR.yml
docs/: plugin-registry-architecture.html
examples/: README.md  draw_support.py  environment.yml  interactive_app.py  park_app.py  requirements.txt  streamlit_app.py  streamlit_folium_complex_example.py  streamlit_folium_example.py  template.py  test_wrap_longitude.py  vnext_app.py
examples/pages/: callbacks.py  center.py  draw_support.py  dynamic_layer_control.py  dynamic_map_vs_rerender.py  dynamic_move.py  dynamic_updates.py  fit_bounds.py  geocoder.py  geojson_popup.py  geojson_styles.py  geoman.py  grouped_layer_control.py  image_overlay.py  keep_in_front.py  layer_control.py  limit_data_return.py  misc_examples.py  realtime.py  responsive.py  simple_popup.py  static_map.py  tag_filter_button.py  tile_layers.py  timeline.py  vector_grid.py  wrap_longitude.py
pages/: 90_기획자_UI_워크스페이스.py  91_리스트_상세_샘플.py  92_입력_폼_샘플.py  95_현장_실무자.py
planner/: PATTERNS.md  README.md  RULES.md  __init__.py  blocks.py  mock_data.py  starter_page.py  theme.py
streamlit_folium/: __init__.py  plugins.py  spec.py
streamlit_folium/event_handlers/: __init__.py
streamlit_folium/frontend/: __init__.py  package.json
streamlit_folium/frontend/public/: index.html
streamlit_folium/frontend/src/: MyComponent.tsx  circle-to-polygon.tsx  index.tsx  old-index.txt
streamlit_folium_vnext/: __init__.py  api.py  pyproject.toml
streamlit_folium_vnext/compiler/: __init__.py  compile_map.py  context.py  nodes.py  registry.py
streamlit_folium_vnext/compiler/plugins/: __init__.py  draw.py  feature_group.py  layer_control.py  map_objects.py
streamlit_folium_vnext/component/: __init__.py  mount.py
streamlit_folium_vnext/frontend/: package.json  tsconfig.json  vite.config.ts
streamlit_folium_vnext/frontend/src/: index.ts
streamlit_folium_vnext/models/: events.py  spec.py
streamlit_folium_vnext/src/streamlit_folium_vnext/: __init__.py  api.py  compiler  component
tests/: app_to_test.py  requirements.txt  test_frontend.py  test_package.py  test_release.py  test_vnext_e2e.py  test_vnext_frontend.py  test_vnext_package.py
visual_baseline/test_basic/first_test/: tags_level_2.txt  tags_level_3.txt
visual_baseline/test_package.test_basic/first_test/: tags_level_1.txt  tags_level_3.txt
vnext_demo_app/: Home.py  app.py  pyproject.toml  streamlit_folium_vnext
vnext_demo_app/pages/: 1_Basic_Map.py  2_Click_Events.py  3_Drawing.py  4_GeoJSON.py  5_Multiple_Maps.py  6_Accumulated_State.py  accumulated_state.py  basic_map.py  click_events.py  drawing.py  dynamic_map.py  geojson.py  heat_map.py  marker_cluster.py  multiple_maps.py  vector_shapes.py
(+8 files in other folders)
