[project]
name = "streamlit-folium"
version = "0.26.1"
description = "Render Folium objects in Streamlit"
readme = "README.md"
authors = [{ name = "Randy Zwitch", email = "rzwitch@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.13.0",
    "folium>=0.13,!=0.15.0",
    "jinja2",
    "branca",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
source-include = [
    "README.md",
    "LICENSE"
]
source-exclude = [
    "streamlit_folium/frontend/node_modules/**/*",
    "streamlit_folium/frontend/src/**/*"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["B008", "ISC001", "E501", "W191", "B018"]
select = [
    "B",
    "E",
    "F",
    "W",
    "I",
    "N",
    "C4",
    "EXE",
    "ISC",
    "ICN",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "ERA",
    "PLC",
    "RUF",
    "ARG",
]


[tool.mypy]
files = ["**/*.py"]
follow_imports = "silent"
ignore_missing_imports = true
scripts_are_modules = true
python_version = "3.10"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
]
test = [
    "folium>=0.13,!=0.15.0",
    "geopandas>=1.0.1",
    "pytest>=7.1.2",
    "pytest-playwright>=0.7.0",
    "pytest-rerunfailures>=15.1",
    "streamlit>=1.13.0,!=1.34.0",
]
