[project]
name = "vnext-demo"
version = "0.1.0"
description = "Demo app for streamlit-folium vnext"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.13.0",
    "folium>=0.13,!=0.15.0",
    "streamlit-folium-vnext @ git+https://github.com/blackary/streamlit-folium.git@ccv2-poc#subdirectory=streamlit_folium_vnext",
]
